--- a/JWScrollIndicatorView/JWScrollIndicatorView/Base.lproj/Main.storyboard
+++ b/JWScrollIndicatorView/JWScrollIndicatorView/Base.lproj/Main.storyboard
@@ -18,14 +18,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="o1g-Er-MsU">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="rON-bL-nup">
                                         <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rON-bL-nup" id="nf0-Ra-kk2">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -42,7 +42,13 @@
                             <constraint firstItem="o1g-Er-MsU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="adE-3U-LNC"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="o1g-Er-MsU" secondAttribute="bottom" id="bE3-EJ-dyE"/>
                             <constraint firstItem="o1g-Er-MsU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ksg-jk-z5A"/>
+                            <constraint firstItem="o1g-Er-MsU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="piB-FW-2Na"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ksg-jk-z5A"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="o1g-Er-MsU" id="c86-W4-duM"/>
